tests-integration/fixtures/checking/1772823540_type_application_invalid_basic/Main.snap
---
source: tests-integration/src/fixtures.rs
assertion_line: 39
expression: report
---
Terms

Types
Bad :: ?[cannot apply function type]

Synonyms
type Bad = Int String

Diagnostics
error[InvalidTypeApplication]: Cannot apply type 'Int' to 'String'. 'Int' has kind 'Type', which is not a function kind.
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with '?[invalid kind]'
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
